# trinion-backend

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
cores/: manage.py
cores/authentication/: apps.py
cores/authentication/serializers/: login.py  token.py
cores/authentication/tests/: test_rest_api.py
cores/authentication/views/: login.py
cores/cards/: admin.py  apps.py  urls.py
cores/cards/migrations/: 0001_initial.py  0002_initial.py
cores/cards/models/: __init__.py  card.py
cores/cards/serializers/: card.py
cores/cards/views/: card.py
cores/general/: authentication.py
cores/general/utils/: created_modified.py  misc.py
cores/project/: asgi.py  urls.py  wsgi.py
cores/project/settings/: __init__.py  base.py  envvars.py  logging.py  rest_framework.py
cores/project/settings/templates/: settings.dev.py
cores/users/: apps.py
cores/users/managers/: user.py
cores/users/migrations/: 0001_initial.py  0002_remove_user_avatar.py  0003_user_avatar.py
cores/users/model/: user.py
cores/users/models/: user.py
cores/users/serializers/: user.py
cores/users/views/: user.py
scripts/: entrypoint.sh  production_data.py
